fix focus, visible, hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,10 +86,6 @@ ol {
   width: 394px;
 }
 
-.content__list-item:focus-within {
-  border: 1px solid #fff;
-}
-
 .content__list-item:not(:last-of-type) {
   margin: 0 0 30px 0;
 }
@@ -127,6 +123,10 @@ ol {
 .content__card-link {
   display: block;
   text-decoration: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
 }
 
 .content__card-link_current {
@@ -202,7 +202,8 @@ ol {
 }
 
 .search-form__textfield:focus {
-  border: 1px solid #fff;
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__submit-button {
@@ -225,14 +226,19 @@ ol {
   background: #545050;
 }
 
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #FFF;
+  outline-offset: 1px;
+}
+
 .search-form__label {
   display: flex;
   flex-direction: row;
   gap: 5px;
 }
 
-.search-form__label:focus-within {
-  border: 1px solid #FFF;
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #FFF;
 }
 
 .search-form__checkbox-list {
@@ -242,23 +248,24 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 19px;
   height: 19px;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
 }
 
 .search-form__pseudo-checkbox::before {
-  content: '';
   display: none;
-  width: 15px;
-  height: 15px;
-  margin: 1px 1px 1px 1px;
-  background-color: #fff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
+  content: '';
   display: block;
+  background-color: #fff;
+  width: 15px;
+  height: 15px;
 }
 
 .title {
@@ -289,4 +296,9 @@ ol {
   line-height: normal;
   text-align: center;
   background-color: transparent;
+}
+
+.more-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
